kubernetes/apps/network/proxy/adguard/service.yaml
---
# yaml-language-server: $schema=https://github.com/instrumenta/kubernetes-json-schema/raw/refs/heads/master/v1.18.1/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: &name proxy-adguard
  labels:
    app: *name
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector: {} # No pods
---
# yaml-language-server: $schema=https://github.com/instrumenta/kubernetes-json-schema/raw/refs/heads/master/v1.18.1/endpoints-v1.json
apiVersion: v1
kind: Endpoints
metadata:
  name: proxy-adguard
subsets:
  - addresses:
      - ip: "${ADGUARD_IP}"
    ports:
      - port: 80
        protocol: TCP
