kubernetes/apps/network/proxy/adguard/ingress.yaml
---
# yaml-language-server: $schema=https://github.com/instrumenta/kubernetes-json-schema/raw/refs/heads/master/v1.18.1/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &name proxy-adguard
spec:
  ingressClassName: internal
  rules:
    - host: "ag.local.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *name
                port:
                  number: 80
